# aimeio_pn532

./: CMakeLists.txt  Felica.cpp  Felica.h  aimeio.cpp  aimeio.def  aimeio.h  example_config.ini  test.cpp
include/nfc/: nfc-internal.h
libs/: nfc.exp  nfc.lib
src/: Felica.cpp  Felica.h  aimeio.cpp  aimeio.def  aimeio.h  test.cpp
src/util/: Logger.cpp  Logger.h  dprintf.c  dprintf.cpp  logging.h
